--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -22,7 +22,7 @@
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
     }
-    div.source, div.filters, div.reset {
+    div.source, div.filters {
       margin-right: 50px;
       margin-left: 50px;
     }
@@ -38,10 +38,8 @@
       text-align: center;    
     }
     .container {
-      /*width:1000px;*/
       margin: auto; 
       height:120px;
-      /*overflow:auto;*/
       overflow-x: scroll;
       white-space: nowrap;
       border-style: solid;
@@ -49,31 +47,6 @@
       border-width: 1px;
       border-radius: 2px;
     }
-    /*.overlay {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 100%;
-      width: 100%;
-      opacity: 0;
-      transition: .5s ease;
-      background-color: #008CBA;
-    }
-    .container:hover .overlay {
-      opacity: 0.8;
-    }
-    .text {
-      color: white;
-      font-size: auto;
-      font-family: Arial, Helvetica, sans-serif;
-      position: absolute;
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }*/
     </style>
 </head>
 <body>
